# wizardgame-public

./: .gdbinit  .gitignore  CMakeLists.txt  CMakeSettings.json  build.ps1  build.sh  readme.md  renderdoc.cap
assets/: bad_monkey.blend  bad_monkey.gltf  test_cube.blend  test_cube.gltf
src/private/: WG_Component.cpp  WG_ComponentDecorator.cpp  WG_Engine.cpp  WG_Entity.cpp  WG_EntityManager.cpp  WG_EventEmitter.cpp  WG_InstancesSet.cpp  WG_PropsMap.cpp  WG_System.cpp  main.cpp
src/private/componentdecorators/: WG_Tickable.cpp
src/private/components/: WG_GltfLoader.cpp  WG_MeshRenderable.cpp  WG_Rect2d.cpp  WG_Renderable.cpp  WG_Transform.cpp  WG_UiCollidable.cpp  WG_UiRenderable.cpp
src/private/scenes/: WG_Sample2d.cpp  WG_Sample3d.cpp  WG_SampleCollisions.cpp  WG_SampleParsing.cpp
src/private/systems/: WG_Collision2d.cpp  WG_Image.cpp  WG_OpenGL.cpp  WG_Text.cpp  WG_Tick.cpp
src/public/: WG_Colors.h  WG_Component.h  WG_Component.impl.h  WG_ComponentDecorator.h  WG_Engine.h  WG_Entity.h  WG_Entity.impl.h  WG_EntityManager.h  WG_EntityManager.impl.h  WG_EventEmitter.h  WG_EventEmitter.impl.h  WG_InstancesSet.h  WG_InstancesSet.impl.h  WG_Macros.h  WG_PropsMap.h  WG_StringUtils.h  WG_System.h  main.h
src/public/componentdecorators/: WG_Tickable.h
src/public/components/: WG_GltfLoader.h  WG_MeshRenderable.h  WG_Rect2d.h  WG_Renderable.h  WG_Transform.h  WG_Transform.impl.h  WG_UiCollidable.h  WG_UiRenderable.h
src/public/scenes/: WG_SampleScenes.h
src/public/systems/: WG_Collision2d.h  WG_Image.h  WG_OpenGL.h  WG_OpenGL.impl.h  WG_Text.h  WG_Tick.h
